# BiNews-IR-zh-en

./: .gitignore  .gitmodules  README.md  pyproject.toml  vec-map_playground.ipynb  vector_mapping.py
CLIRMatrix/: .gitignore  README.md  convert_document.py  convert_query.py  translate_query.py
bm25_baseline/: .gitignore  bm25_baseline.py  plot.py
dictionaries/: cedict_processed.txt  cedict_processed.txt.backup
scripts/: deduplication_progress_english.json
scripts/greatlakes/vec-map/: align_embeddings.py  my_job.sh  requirements.txt
